Upload to FTP servers added. dryRun added.

--- a/src/main/resources/ru/yandex/jenkins/plugins/debuilder/DebianPackagePublisher/help-method.html
+++ b/src/main/resources/ru/yandex/jenkins/plugins/debuilder/DebianPackagePublisher/help-method.html
@@ -1,3 +1,4 @@
 <div>
-    Other methods is not implemented yet.
+    The scpb method use the dupload tool.
+    The ftp method use a native java implementation. 
 </div>
