Better description messages

--- a/src/main/resources/ru/yandex/jenkins/plugins/debuilder/DebianPackagePublisher/help-incoming.html
+++ b/src/main/resources/ru/yandex/jenkins/plugins/debuilder/DebianPackagePublisher/help-incoming.html
@@ -1,3 +1,7 @@
 <div>
-   The incoming path in the server to put the files.  
+	The incoming path in the server to put the files.<br /> Using the ftp
+	method you can loop through the distributions using the keyword
+	'$distribution$'. The upload process will get all distributions from
+	the '.changes' file and will calculate the full path. Exs:
+	'/debian/incoming', '/repos/incoming/$distribution$'
 </div>
