Better layout and minor fixes to better merge

--- a/src/main/resources/ru/yandex/jenkins/plugins/debuilder/DebianPackageBuilder/help-ignoreDeps.html
+++ b/src/main/resources/ru/yandex/jenkins/plugins/debuilder/DebianPackageBuilder/help-ignoreDeps.html
@@ -1,2 +1,2 @@
-<div>Same package have dependencies and the build process try to
-	install them. Check this if you want to skip this process.</div>
+<div>Some packages have build dependencies and this plugin tries
+	to install them. Check this if you want to skip this process.</div>
