--- a/src/main/resources/ru/yandex/jenkins/plugins/debuilder/DebianPackagePublisher/help-name.html
+++ b/src/main/resources/ru/yandex/jenkins/plugins/debuilder/DebianPackagePublisher/help-name.html
@@ -1,3 +1,3 @@
 <div>
-    The name that is referenced in the dupload tool and in jenkins repo list.
+   The reference used by the dupload tool and jenkins.
 </div>
