Added a better module key for DebianBadges. Setting envs before build, so you can use this in the build process.

--- a/src/main/resources/ru/yandex/jenkins/plugins/debuilder/DebianPackageBuilder/help-useTagAndBuild.html
+++ b/src/main/resources/ru/yandex/jenkins/plugins/debuilder/DebianPackageBuilder/help-useTagAndBuild.html
@@ -1,2 +1,5 @@
 <div>Search for tags on SCM in the format 'v[a-zA-Z.~]+' and
-	append the sequential build number '+build.1'</div>
+	append the sequential build number '+build.1'. The build version will
+	be reset every time a new major version is found. If you change the
+	debian path your build version maybe will reset too, for more details
+	see the debian path's help.</div>
