--- a/src/main/resources/ru/yandex/jenkins/plugins/debuilder/DebianPackageBuilder/help-pathToDebian.html
+++ b/src/main/resources/ru/yandex/jenkins/plugins/debuilder/DebianPackageBuilder/help-pathToDebian.html
@@ -1,3 +1,4 @@
-<div>
-    Path to 'debian' folder, containg .deb metadata, relative to the workspace root.
-</div>
+<div>Path to 'debian' folder, containg .deb metadata, relative
+	tothe workspace root. Since it's possible to create more than one
+	package in the same build, the path is used as a key, so changing it
+	may cause unwanted behaviour.</div>
